feat: create fake db

--- a/app/src/main/res/layout/activity_create_med.xml
+++ b/app/src/main/res/layout/activity_create_med.xml
@@ -144,6 +144,6 @@
         android:backgroundTint="@color/primary_500"
         android:onClick="onFinish"
         android:padding="5pt"
-        android:text="Finish" />
+        android:text="Submit" />
 
 </LinearLayout>
