feat: add wiki for medicine

--- a/app/src/main/res/layout/activity_create_medicine.xml
+++ b/app/src/main/res/layout/activity_create_medicine.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="15pt"
-    tools:context=".CreateMedActivity">
+    tools:context=".CreateMedicineActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -33,13 +33,13 @@
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3pt">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editMedName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5pt"
                 android:ems="10"
                 android:inputType="textPersonName" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -63,7 +63,8 @@
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3pt">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editHtu"
@@ -93,7 +94,8 @@
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3pt">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editDrNote"
@@ -123,14 +125,14 @@
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3pt">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editPNote"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5pt"
-                android:ems="10"
                 android:inputType="textPersonName" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -143,7 +145,7 @@
         android:layout_marginTop="10pt"
         android:backgroundTint="@color/primary_500"
         android:onClick="onFinish"
-        android:padding="5pt"
+        android:padding="6pt"
         android:text="Submit" />
 
 </LinearLayout>
