--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,76 +6,22 @@
     android:layout_height="match_parent"
     android:background="@color/gray_100"
     android:orientation="vertical"
-    android:padding="15pt"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Welcome back,"
-        android:textColor="@color/primary"
-        android:textSize="38sp"
-        android:textStyle="bold" />
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2pt"
-        android:text="remember to take these:"
-        android:textColor="@color/primary_400"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8pt"
-        android:layout_weight="1"
-        android:paddingTop="5pt"
-        android:paddingBottom="5pt"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="4pt">
+        app:itemIconTint="@color/primary_500"
+        app:itemTextColor="@color/primary_500"
+        app:menu="@menu/bottom_menu">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/medRV"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingStart="7pt"
-            android:paddingTop="5pt"
-            android:paddingEnd="7pt"
-            android:paddingBottom="5pt"
-            tools:listitem="@layout/daily_medicine_list_item" />
-
-    </androidx.cardview.widget.CardView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20pt"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?attr/selectableItemBackground"
-        android:orientation="horizontal"
-        android:paddingTop="5pt"
-        android:paddingBottom="5pt"
-        android:onClick="onCreateMedicine">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Medicine Wiki"
-            android:textColor="@color/primary_400"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5pt"
-            android:text="see more"
-            android:textColor="@color/gray_800" />
-
-
-    </LinearLayout>
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 </LinearLayout>
