feat: add medicine detail

--- a/app/src/main/res/layout/activity_create_medicine.xml
+++ b/app/src/main/res/layout/activity_create_medicine.xml
@@ -8,9 +8,18 @@
     android:padding="15pt"
     tools:context=".CreateMedicineActivity">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/secondary"
+        android:onClick="onCancel"
+        android:text="Cancel"
+        android:textAllCaps="false" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5pt"
         android:layout_marginBottom="20pt"
         android:text="Add to your wiki"
         android:textColor="@color/primary_500"
@@ -146,6 +155,7 @@
         android:backgroundTint="@color/primary_500"
         android:onClick="onFinish"
         android:padding="6pt"
-        android:text="Submit" />
+        android:text="Submit"
+        android:textAllCaps="false" />
 
 </LinearLayout>
