--- a/app/src/main/res/layout/fragment_medicine_wiki.xml
+++ b/app/src/main/res/layout/fragment_medicine_wiki.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     tools:context=".MedicineWikiFragment">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -46,13 +45,12 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
 
-            <Button
+            <ImageButton
                 android:id="@+id/createButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/primary_500"
-                android:text="ADD"
-                android:textStyle="bold" />
+                android:src="@drawable/ic_add" />
 
         </LinearLayout>
 
@@ -71,7 +69,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_marginTop="2pt"
             android:layout_weight="1"
             android:orientation="vertical">
