--- a/app/src/main/res/layout/activity_medicine_detail.xml
+++ b/app/src/main/res/layout/activity_medicine_detail.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="15pt"
+    android:padding="10pt"
     tools:context=".MedicineDetailActivity">
 
     <Button
@@ -44,70 +44,91 @@
             android:src="@drawable/ic_playlist_add" />
     </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8pt"
-        android:text="How To Use"
-        android:textColor="@color/gray_800"
-        android:textSize="18sp"
-        android:textStyle="bold" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/medHtu"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5pt"
-            android:text="How to use Note"
-            android:textColor="@color/gray_900" />
+            android:orientation="vertical"
+            android:padding="8pt">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5pt"
+                android:text="How To Use"
+                android:textColor="@color/gray_800"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/medHtu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="How to use Note"
+                android:textColor="@color/gray_900" />
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20pt"
-        android:layout_marginBottom="8pt"
-        android:text="Doctor Note"
-        android:textColor="@color/gray_800"
-        android:textSize="18sp"
-        android:textStyle="bold" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20pt">
 
-        <TextView
-            android:id="@+id/medDoctor"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5pt"
-            android:textColor="@color/gray_900" />
+            android:orientation="vertical"
+            android:padding="8pt">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5pt"
+                android:text="Doctor Note"
+                android:textColor="@color/gray_800"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/medDoctor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/gray_900" />
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20pt"
-        android:layout_marginBottom="8pt"
-        android:text="Personal Note"
-        android:textColor="@color/gray_800"
-        android:textSize="18sp"
-        android:textStyle="bold" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20pt">
 
-        <TextView
-            android:id="@+id/medPersonal"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5pt"
-            android:textColor="@color/gray_900" />
+            android:orientation="vertical"
+            android:padding="8pt">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5pt"
+                android:text="Personal Note"
+                android:textColor="@color/gray_800"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/medPersonal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/gray_900" />
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
