--- a/app/src/main/res/layout/fragment_daily_medicine.xml
+++ b/app/src/main/res/layout/fragment_daily_medicine.xml
@@ -9,8 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="15pt">
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
