refactor: organize folder

--- a/app/src/main/res/layout/activity_create_medicine.xml
+++ b/app/src/main/res/layout/activity_create_medicine.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10pt"
-    tools:context=".CreateMedicineActivity">
+    tools:context=".Activities.CreateMedicineActivity">
 
     <Button
         android:layout_width="wrap_content"
