--- a/app/src/main/res/layout/activity_medicine_detail.xml
+++ b/app/src/main/res/layout/activity_medicine_detail.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10pt"
-    tools:context=".MedicineDetailActivity">
+    tools:context=".Activities.MedicineDetailActivity">
 
     <Button
         android:layout_width="wrap_content"
